# mypackage

./: .flake8  .gitignore  Model.pth  README.md  classes.py  client.py  docker-compose.yaml  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml  run.yaml  test.yaml  train.yaml
data/: .gitignore  dataset.csv.dvc  dataset_rain_pain.csv.dvc  test_rain_pain.csv.dvc  train_rain_pain.csv.dvc
mlruns/0/: meta.yaml
model_repository/onnx-model/: config.pbtxt
models/: classifier.dvc  model.onnx.dvc
my_package/: classes.py  classifier.py  data.py  infer.py  model.py  run_server.py  train.py
mypackage/: infer.py
outputs/2023-11-27/22-48-16/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-27/23-03-24/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/22-23-01/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/23-49-30/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/23-49-47/.hydra/: hydra.yaml
outputs/2023-11-30/23-50-14/.hydra/: config.yaml  hydra.yaml
weather_classifier/: data.py  model.py  run_server.py  train.py
