[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "My first poetry project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
imblearn = "^0.0"
requests = "^2.31.0"
joblib = "^1.3.2"
pre-commit = "^3.4.0"
dvc = {extras = ["gdrive"], version = "^3.30.1"}
hydra-core = "^1.3.2"
torch = {version = "^2.1.1+cpu", source = "pytorch"}
torchvision = {version = "^0.16.1+cpu", source = "pytorch"}
torchmetrics = "^1.2.0"
mlflow = "^2.8.1"
lightning = "^2.1.2"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"



[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
